# xchplot2

./: .dockerignore  .gitignore  .markdownlint.json  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  NOTICE  README.md  SECURITY.md  _typos.toml  build.rs  compose.yaml
.github/: dependabot.yml
.github/workflows/: arch-matrix.yml  ci.yml  install-matrix.yml
ci/install-matrix/: debian12-kitware.Containerfile  fedora41-nvidia-apt.Containerfile  rocky9-nvidia-apt.Containerfile  ubuntu2204-nvidia-apt.Containerfile  ubuntu2404-nvidia-apt.Containerfile  ubuntu2404-rustup.Containerfile
contrib/: testnet-farming.patch
docs/: gpu-portability-sketch.md  perf-opportunities.md  streaming-pipeline-design.md
keygen-rs/: .gitignore  Cargo.toml
keygen-rs/include/: pos2_keygen.h
keygen-rs/src/: lib.rs
scripts/: build-container.sh  install-container-deps.sh  install-deps.sh  test-multi-gpu.sh
scripts/test/install-container-deps/: arch.txt  fedora.txt  run.sh  ubuntu.txt
src/: main.rs
src/gpu/: AesGpu.cu  AesGpu.cuh  AesGpuBitsliced.cu  AesGpuBitsliced.cuh  AesHashBsSycl.hpp  AesHashGpu.cuh  AesSBoxBP.cuh  AesStub.cpp  AesTables.inl  AesTezcan.cuh  CudaDeviceList.cu  CudaDeviceList.hpp  CudaHalfShim.hpp  DeviceIds.hpp  FeistelCipherGpu.cuh  MatchKernelCommon.cuh  PipelineKernels.cuh  PipelineKernelsSycl.cpp  PortableAttrs.hpp  Sort.cuh  SortCubInternal.cuh  SortCuda.cu  SortDispatch.cpp  SortDistributed.cpp  SortDistributed.hpp  SortDistributedPeer.cpp  SortDistributedPeer.hpp  SortSycl.cpp  SortSyclCub.cpp  StreamingPartition.cu  StreamingPartition.cuh  StreamingPartitionSycl.cpp  SyclBackend.cpp  SyclBackend.hpp  SyclDeviceList.cpp  SyclDeviceList.hpp  T1Kernel.cpp  T1Kernel.cu  T1Kernel.cuh  T1Offsets.cuh  (+19 more)
src/host/: BatchPlotter.cpp  BatchPlotter.cu  BatchPlotter.hpp  Cancel.cpp  Cancel.hpp  ConfigFile.cpp  ConfigFile.hpp  CpuPlotter.cpp  CpuPlotter.hpp  GpuBufferPool.cpp  GpuBufferPool.cu  GpuBufferPool.hpp  GpuPipeline.cpp  GpuPipeline.cu  GpuPipeline.hpp  GpuPlotter.cpp  GpuPlotter.hpp  HostPinnedPool.cpp  HostPinnedPool.hpp  MultiGpuPipelineParallel.cpp  MultiGpuPipelineParallel.hpp  MultiGpuPlotPipeline.cpp  MultiGpuPlotPipeline.hpp  MultiGpuShardBufferPool.hpp  PlotFileWriterParallel.cpp  PlotFileWriterParallel.hpp  PoolSizing.hpp  TempFile.cpp  TempFile.hpp
tools/gpu_plotter/: main.cpp
tools/parity/: ParityCommon.hpp  aes_bs_bench.cu  aes_bs_parity.cu  aes_parity.cu  aes_tezcan_bench.cu  host_pinned_pool_test.cpp  plot_file_parity.cpp  sycl_bucket_offsets_parity.cpp  sycl_distributed_sort_parity.cpp  sycl_fragment_phase_sharded_parity.cpp  sycl_g_x_parity.cpp  sycl_phase_split_parity.cpp  sycl_pipeline_parallel_parity.cpp  sycl_scatter_parity.cpp  sycl_sharded_reference.hpp  sycl_sort_parity.cpp  sycl_sort_u32_u64_parity.cpp  sycl_streaming_partition_parity.cpp  sycl_streaming_partition_u32_u64_u32_parity.cpp  sycl_t1_parity.cpp  sycl_t1_phase_sharded_parity.cpp  sycl_t2_phase_sharded_parity.cpp  sycl_t3_phase_sharded_parity.cpp  sycl_two_level_sort_parity.cpp  sycl_xs_phase_sharded_parity.cpp  t1_debug.cu  t1_parity.cpp  t1_parity.cu  t2_parity.cpp  t2_parity.cu  t3_parity.cpp  t3_parity.cu  temp_file_test.cpp  xs_bench.cu  xs_parity.cu
tools/sanity/: hellosycl.cpp
tools/xchplot2/: cli.cpp  cli_devlink.cu  main.cpp  xchplot2_cli.h
